Pastebin share card did not disappear behind the navbar dropdown, this is a quick fix increasing the z-index of the navbar from 1 to 10 placing it infront of most elements.

--- a/landing/main.css
+++ b/landing/main.css
@@ -60,7 +60,7 @@ body {
 
 .bg-personal {
   background-color: #0277BD;
-  z-index: 1;
+  z-index: 10;
 }
 
 .col-auto {
